--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,80 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+# Compiled class files
+*.class
+
+# Log files
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+
+# Gradle
+.gradle/
+build/
+
+# Dependency directories
+**/out/
+**/build/
+**/bin/
+
+# IDEs and Editors
+.idea/
+*.iml
+*.ipr
+*.iws
+.vscode/
+*.swp
+
+# Eclipse
+.settings/
+.metadata/
+.classpath
+.project
+*.launch
+
+# NetBeans
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+*.nbattrs
+
+# IntelliJ IDEA
+out/
+*.idea/
+*.iml
+*.ipr
+*.iws
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# Others
+*.log
+*.tmp
+*.bak
+*.swp
+*.lock
+*.stackdump
+*.dump
